--- a/map/Lilac12k/Base.lproj/Main.storyboard
+++ b/map/Lilac12k/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="G49-xF-z2q">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="G49-xF-z2q">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
@@ -993,7 +993,7 @@
                                         </constraints>
                                         <attributedString key="attributedText">
                                             <fragment>
-                                                <string key="content">Welcome to Lilac12k, also known as the official, Unofficial Bloomsday App!  Use this app to track your race results or watch from the comfort of your own home as your friends race on the day of Bloomsday! The tabs bellow will help you naviage the app.</string>
+                                                <string key="content">Welcome to Lilac12k, also known as the official, Unofficial Bloomsday App!  Use this app to track your race results or watch from the comfort of your own home as your friends race on the day of Bloomsday! The tabs bellow will help you navigate the app.</string>
                                                 <attributes>
                                                     <color key="NSColor" red="0.42745098040000001" green="0.1333333333" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     <font key="NSFont" size="12" name="HelveticaNeue"/>
