--- a/map/Lilac12k/Base.lproj/Main.storyboard
+++ b/map/Lilac12k/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="G49-xF-z2q">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="G49-xF-z2q">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
@@ -167,10 +167,10 @@
             </objects>
             <point key="canvasLocation" x="-437" y="-2618"/>
         </scene>
-        <!--View Controller-->
+        <!--FBController-->
         <scene sceneID="jKF-jO-gjU">
             <objects>
-                <viewController id="qaL-Be-jq4" customClass="FBViewController" customModule="Lilac12k" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="FBController" id="qaL-Be-jq4" customClass="FBViewController" customModule="Lilac12k" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="rMt-wC-WUm"/>
                         <viewControllerLayoutGuide type="bottom" id="8zH-ZS-fQo"/>
@@ -1842,6 +1842,6 @@ A friend can only be tracked if they have transmitted a run in the last hour.</s
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="fav-gC-Z1s"/>
-        <segue reference="bJJ-aG-hMy"/>
+        <segue reference="aea-Ao-udj"/>
     </inferredMetricsTieBreakers>
 </document>
