--- a/map/Lilac12k/Base.lproj/Main.storyboard
+++ b/map/Lilac12k/Base.lproj/Main.storyboard
@@ -664,7 +664,7 @@
                                                     <constraint firstAttribute="height" constant="37" id="Lnp-7K-cYx"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                <state key="normal" title="CENTER"/>
+                                                <state key="normal" title="CENTER ON"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
                                                         <color key="value" red="0.054901960780000002" green="0.35686274509999999" blue="0.30588235289999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -1842,6 +1842,6 @@ A friend can only be tracked if they have transmitted a run in the last hour.</s
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="fav-gC-Z1s"/>
-        <segue reference="aea-Ao-udj"/>
+        <segue reference="bJJ-aG-hMy"/>
     </inferredMetricsTieBreakers>
 </document>
